--- a/apps/delight/app.css
+++ b/apps/delight/app.css
@@ -3,6 +3,8 @@
 	--theme-primary-text: red;
 
 	--theme-brand-color: rgb(76, 167, 197);
+
+	--theme-button-body-backgrond: blue;
 }
 
 @media (prefers-color-scheme: light) {
@@ -52,36 +54,27 @@ c-application-bar {
 
 #featureNavList > li {
 	display: inline-block;
-	margin: 1em;
 }
 
-c-application {
-	/* display: grid; */
-	/* grid-gap: 10px; */
-	/* grid-template-columns: 1fr; */
-	/* grid-template-rows: auto 1fr;
-	grid-template-areas:
-			"header"
-			"content"; */
-	/* width: 100%;
-	height: 100%; */
-}
-
-/* header {
-	grid-area: header;
-}
-main {
-	grid-area: content;
+#burgerMenuButton::part(button) {
 	display: block;
-	overflow-y: scroll;
-} */
 
-c-application > *[slot="pages"] {
-	visibility: hidden;
-}
+	border: none;
+	background: transparent;
+	border-radius: 15%;
 
-c-application > *[slot="pages"][active="true"] {
-	visibility: visible;
+	height: 100%;
+
+	padding: .5em;
+
+	min-width: 5em;
+	min-height: 2em;
+
+
+	justify-content: center;
+  	align-items: center;
+
+	background-color: var(--theme-button-body-backgrond, red);
 }
 
 c-face {
