--- a/apps/delight/app.css
+++ b/apps/delight/app.css
@@ -1,33 +1,39 @@
+@import url("../../theme/themes.css");
+
 .brandC {
 	--theme-primary-background: red;
 	--theme-primary-text: red;
 
-	--theme-brand-color: rgb(76, 167, 197);
+	--theme-brand-color: #00607f;
 
 	--theme-button-body-backgrond: blue;
+
+	--theme-nav-background-color: white;
+	--theme-nav-text-color: black;
 }
+
+
+*, :root {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
 
 @media (prefers-color-scheme: light) {
 	.brandC {
-		--theme-primary-background: rgb(182, 174, 157);
+		--theme-primary-background: rgb(169, 165, 175);
 		--theme-primary-text: black;
 	}
 }
 
 @media (prefers-color-scheme: dark) {
 	.brandC {
-		--theme-primary-background: rgb(0, 80, 146);
+		--theme-primary-background: rgb(10, 35, 59);
 		--theme-primary-text: white;
 	}
 }
 
-
-
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
 
 body {
 	background-color: var(--theme-primary-background, red);
@@ -36,8 +42,18 @@ body {
 	display: block;
 	min-height: 100vh;
 	width: 100vw;
+	/* overflow: hidden; */
 
 	font-size: larger;
+	font-family: "Proxima Nova", sans-serif !important;
+}
+
+nav {
+	overflow: scroll;
+	background-color: var(--theme-nav-background-color, red);
+	color: var(--theme-nav-text-color, red);
+
+	height: 100%;
 }
 
 c-application-frame {
@@ -45,31 +61,108 @@ c-application-frame {
 	/* grid-gap: 10px; */
 	/* grid-template-columns: 1fr; */
 	grid-template-rows: auto 1fr;
-	grid-template-areas:
+	/* grid-template-areas:
+			"header", "header"
+			"aside", "main"; */
+
+		gap: 0;
+		grid-template-areas:
 			"header"
-			"content";
+			"aside"
+			"main";
+
 	width: 100%;
-	height: 100%;
+	height: 100vh;
+
+	overflow: hidden;
 }
+
+/* @media (min-width: 500px) {
+	c-appplication-frame {
+		grid-template-columns: 1fr 3fr;
+		grid-template-areas:
+			"header  header"
+			"aside     aside"
+			"sidebar  main"
+			"ad      footer";
+	}
+} */
+
+@media (min-width: 700px) {
+	c-application-frame{
+		grid-template-columns: 1fr 4fr 1fr;
+		grid-template-areas:
+			"header header  header"
+			"aside    main  sidebar"
+			"aside    main  ad"
+			"footer footer  footer"
+	}
+}
+
 c-application-frame::part(header) {
 	grid-area: header;
-	border: 1px solid red;
 }
 c-application-frame::part(main) {
-	grid-area: content;
+	grid-area: main;
 	display: block;
-	overflow-y: scroll;
-	border: 1px solid red;
 }
 
-#statePager > c-page {
-	visibility: hidden;
+c-application-frame::part(aside) {
+	grid-area: aside;
+	display: block;
+	overflow: scroll;
 }
 
-#statePager > c-page {
-	visibility: visible;
+#accountButton {
+	display: block;
 }
 
+#accountButton::part(button) {
+	background: transparent;
+	border: none;
+	padding: 0;
+}
+
+#accountButton::part(button-icon) {
+	display: none;
+}
+
+#accountButton::part(button-label) {
+	display: none;
+}
+
+
+#userFace {
+	display: inline-block;
+	background-color: lightgray;
+	border-radius: 50%;
+	margin: .25em;
+}
+
+#userFace::part(unknownAvatar) {
+	display: block;
+}
+
+#userFace::part(avatar) {
+	display: none;
+}
+
+#userFace::part(initials) {
+	display: none;
+}
+
+#userFace::part(image) {
+	color: black;
+	background-image: url("../../icons/user.svg");
+
+	display: block;
+
+	width: 16px;
+	height: 16px;
+
+	margin: 1em;
+	overflow: hidden;
+}
 
 c-application-bar {
 	display: flex;
@@ -96,30 +189,50 @@ c-application-bar {
 
 	height: 100%;
 
-	padding: .5em;
-
 	min-width: 5em;
 	min-height: 2em;
 
 
 	justify-content: center;
-  	align-items: center;
+  align-items: center;
 
 	background-color: var(--theme-button-body-backgrond, red);
 }
 
 
-#logoutButton {
-	overflow: hidden;
-
+#statePager > c-page {
+	visibility: hidden;
 }
 
-c-face {
-	border-radius: 50%;
-	overflow: hidden;
+#statePager > c-page[active="true"] {
+	visibility: visible;
 }
 
-c-face[size="medium"] {
-	width: 64px;
-	height: 64px;
+
+#statePager {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+  align-items: center;
+}
+
+#anon {
+	display: block;
+	max-width: 50%;
+	background-color: pink;
+	padding: 1em;
+	margin-top: 2em;
+	border: 2px solid white;
+}
+
+#githubLoginButton {
+	display: inline;
+	margin-left: .5em;
+	text-decoration: none;
+	color: black
+}
+
+#githubLoginLogo {
+	display: inline;
+
 }
