--- a/apps/delight/app.css
+++ b/apps/delight/app.css
@@ -77,18 +77,7 @@ c-application-frame {
 	overflow: hidden;
 }
 
-/* @media (min-width: 500px) {
-	c-appplication-frame {
-		grid-template-columns: 1fr 3fr;
-		grid-template-areas:
-			"header  header"
-			"aside     aside"
-			"sidebar  main"
-			"ad      footer";
-	}
-} */
-
-@media (min-width: 700px) {
+@media (min-width: 600px) {
 	c-application-frame{
 		grid-template-columns: 1fr 4fr 1fr;
 		grid-template-areas:
@@ -210,23 +199,25 @@ c-application-bar {
 
 
 #statePager {
+
+}
+
+#anon {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
   align-items: center;
 }
 
-#anon {
+#githubLoginButton {
 	display: block;
 	max-width: 50%;
 	background-color: pink;
 	padding: 1em;
 	margin-top: 2em;
+	margin-bottom: 2em;
 	border: 2px solid white;
-}
 
-#githubLoginButton {
-	display: inline;
 	margin-left: .5em;
 	text-decoration: none;
 	color: black
